--- a/Cooperative_project/prj5_exp16/report/main.tex
+++ b/Cooperative_project/prj5_exp16/report/main.tex
@@ -382,21 +382,15 @@ $\bullet$
   else if(id_allowin)
   id_valid <= if_to_id_valid;
   end
-\end{lstlisting}
-\noindent
-$\bullet$
-\textbf{指令译码定义太宽泛导致异常判断出错}。
-
-
-         
+\end{lstlisting}     
 
       
 \vspace{1ex}
 
 \section{小组成员分工合作情况}
-王敬华负责ex级访存添加类sram总线支持。（qwq这次实验事情比较多写的太少了，下次我来写otz）
+王敬华负责ex级访存添加类sram总线支持。
 
-李霄宇负责exp13的异常处理和计时器指令的实现
+李霄宇负责部分debug工作。
 
 艾华春负责if级取指添加类sram总线支持；类sram-axi转接桥
 
