--- a/Cooperative_project/prj6_exp19/report/main.tex
+++ b/Cooperative_project/prj6_exp19/report/main.tex
@@ -96,6 +96,191 @@
 \noindent
 $\bullet$
 \textbf{TLB模块设计}。
+\begin{enumerate}
+  \item TLB 总体工作原理\par
+  TLB 采用全相联查找表的组织形式。在TLB模块中保存了TLB页表的内容，共16个页表项。并通过2个查找端口，1个读端口，1个写端口和一个INVTLB指令
+  端口与外部交换数据。实现了对TLB页表的4种操作：\par
+  查找：输入虚双页号vppn、虚地址12位va_bit12与地址空间标识asid，
+  得到对应物理页的内容。\par
+  写：输入页表项数index，并将输入的页表项内容写到对应的页表项里。\par
+  读：输入页表项数index，并得到对应的页表项中的内容。\par
+  无效指令INVTLB：使满足opcode对应条件的页表项无效化。\par
+  TLB页表中每一个页表项为一个双页，包含比较部分和物理转换部分，结构如下图：
+  \begin{figure}[H]
+    \centering
+    \includegraphics[width=13cm]{fig/1.png}
+  \end{figure}
+  本次实验中实现的TLB页表中包含16个页表项，
+  能保存16对32个页。页大小有2MB与4KB两种，通过ps4MB信号指示。
+  使用15组寄存器来保存页表内容：
+  \begin{lstlisting}[language=verilog]
+    reg [TLBNUM-1:0] tlb_e;
+    reg [TLBNUM-1:0] tlb_ps4MB; //pagesize 1:4MB, 0:4KB
+
+    reg [18:0] tlb_vppn [TLBNUM-1:0];
+    reg [ 9:0] tlb_asid [TLBNUM-1:0];
+    reg        tlb_g    [TLBNUM-1:0];
+
+    reg [19:0] tlb_ppn0 [TLBNUM-1:0];
+    reg [ 1:0] tlb_plv0 [TLBNUM-1:0];
+    reg [ 1:0] tlb_mat0 [TLBNUM-1:0];
+    reg        tlb_d0   [TLBNUM-1:0];
+    reg        tlb_v0   [TLBNUM-1:0];
+
+    reg [19:0] tlb_ppn1 [TLBNUM-1:0];
+    reg [ 1:0] tlb_plv1 [TLBNUM-1:0];
+    reg [ 1:0] tlb_mat1 [TLBNUM-1:0];
+    reg        tlb_d1   [TLBNUM-1:0];
+    reg        tlb_v1   [TLBNUM-1:0];
+  \end{lstlisting}
+  \item TLB 读写设计\par
+
+  TLB模块的读写方式与寄存器堆的读写方式十分类似。读TLB的方式是根据传入的index将对应表项各个域的数据通
+  过组合逻辑读出；写TLB的方式是根据传入的index和写使能信
+  号，在下一拍将要写的各个域的数据写入对应表项相应位置。
+  \begin{lstlisting}[language=verilog]
+    //read
+assign r_e    = tlb_e    [r_index];
+assign r_vppn = tlb_vppn [r_index];
+assign r_ps   = tlb_ps4MB[r_index]? 6'b010101 : 6'b001100;
+assign r_asid = tlb_asid [r_index];
+assign r_g    = tlb_g    [r_index];
+
+assign r_ppn0 = tlb_ppn0 [r_index];
+assign r_ppn1 = tlb_ppn1 [r_index];
+assign r_plv0 = tlb_plv0 [r_index];
+assign r_plv1 = tlb_plv1 [r_index];
+assign r_mat0 = tlb_mat0 [r_index];
+assign r_mat1 = tlb_mat1 [r_index];
+assign r_d0   = tlb_d0   [r_index];
+assign r_d1   = tlb_d1   [r_index];
+assign r_v0   = tlb_v0   [r_index];
+assign r_v1   = tlb_v1   [r_index];
+
+//write
+wire   w_ps4MB;
+assign w_ps4MB=(w_ps == 6'b010101)?1:0;
+
+always @(posedge clk)
+    begin
+        if(we)
+            begin
+                tlb_e[w_index]      <= w_e;
+                tlb_vppn[w_index]   <= w_vppn;
+                tlb_ps4MB[w_index]  <= w_ps4MB;
+                tlb_asid[w_index]   <= w_asid;
+                tlb_g[w_index]      <= w_g;
+
+                tlb_ppn0[w_index]   <= w_ppn0;
+                tlb_ppn1[w_index]   <= w_ppn1;
+                tlb_plv0[w_index]   <= w_plv0;
+                tlb_plv1[w_index]   <= w_plv1;
+                tlb_mat0[w_index]   <= w_mat0;
+                tlb_mat1[w_index]   <= w_mat1;
+                tlb_d0[w_index]     <= w_d0;
+                tlb_d1[w_index]     <= w_d1;
+                tlb_v0[w_index]     <= w_v0;
+                tlb_v1[w_index]     <= w_v1;
+            end
+  \end{lstlisting}
+  但在读写过程中需要注意的是，由于龙芯架构32位精简版只支持4KB和
+  4MB两种页大小，因此尽管TLB表项中的PS域是6bit，但其只有0和1两
+  种取值：0表示页大小为4KB（两个物理页大小均为4KB），1表示页大小
+  为4MB（两个物理页大小均为2MB）。而TLB模块输入和输出中的PS端口标记
+  了页的真实大小，取值分别是6’d21和6’d12，因此在对页表项进行读写
+  操作时需要将两者进行转换。\par
+  除此之外，TLB 写操作还需要实现TLB invtlb指令的opcode对应的操作：
+  \begin{figure}[H]
+    \centering
+    \includegraphics[width=13cm]{fig/2.png}
+  \end{figure}
+  按照讲义上面的提示，可以将各操作的匹配分解成若干 “子匹配” 的逻辑组合，具体来说，可得到 4 个 “子匹配”
+  的判断条件：（1）cond1——G 域是否等于 0；（2）cond2——G 域是否等于 1；（3）cond3——s1_asid
+  是否等于 ASID 域；（4）cond4——s1_vppn 是否匹配 VPPN 和 PS 域
+  \begin{lstlisting}[language=verilog]
+    generate
+    for (i = 0; i < TLBNUM; i = i + 1) begin
+       assign cond1[i] = ~tlb_g[i];
+       assign cond2[i] =  tlb_g[i];
+       assign cond3[i] = s1_asid == tlb_asid[i];
+       assign cond4[i] = (s1_vppn[18:9] == tlb_vppn[i][18:9])&&(tlb_ps4MB[i]||(s1_vppn[8:0] == tlb_vppn[i][8:0]));
+    end
+endgenerate
+  \end{lstlisting}
+  那么 invtlb op=0、1 的匹配
+  条件就可以表达为 cond1||cond2，op=4 的匹配条件可以表达为 cond1\&\&cond3，op=5 的匹配条
+  件可以表达为 cond1\&\&cond3\&\&cond4，op=6 的匹配条件可以表达为 (cond2||cond3)\&\&cond4。
+  根据cond1~cond4得到match信号如下：
+  \begin{lstlisting}[language=verilog]
+    assign inv_match = (invtlb_op == 5'h0 || invtlb_op == 5'h1) ? (cond1 | cond2):
+    invtlb_op == 5'h2 ? cond2:
+    invtlb_op == 5'h3 ? cond1:
+    invtlb_op == 5'h4 ? cond1 & cond3:
+    invtlb_op == 5'h5 ? cond1 & cond3 & cond4:
+    (cond2 | cond3) & cond4;
+  \end{lstlisting}
+  在invtlb指令有效时，根据输入的opcode选择inv_match，
+  将inv_match对应位为1的页表项无效化（e值清零），为0的页表项不变：
+  \begin{lstlisting}[language=verilog]
+    else if(invtlb_valid && invtlb_op < 5'h7)
+    begin
+        tlb_e               <= ~inv_match & tlb_e;
+    end
+  \end{lstlisting}
+  \item TLB 查找设计\par
+  TLB模块提供了两个通道用于查找，一个通道对应取指阶段的查找，
+  另一个通道对应访存阶段的查找。查找的流程是并行化的，即同时
+  对16个页表项的奇偶相邻页表的物理转换信息进行比较和查找，并用两个
+  16位宽的match信号表示查找结果。\par
+  \begin{lstlisting}[language=verilog]
+    genvar i;
+generate
+    for (i = 0; i < TLBNUM; i = i + 1) begin
+        assign match0[i] = (s0_vppn[18:9]==tlb_vppn[i][18:9]) && (tlb_ps4MB[i] || s0_vppn[8:0]==tlb_vppn[i][8:0]) && ((s0_asid==tlb_asid[i]) || tlb_g[i]);
+        assign match1[i] = (s1_vppn[18:9]==tlb_vppn[i][18:9]) && (tlb_ps4MB[i] || s1_vppn[8:0]==tlb_vppn[i][8:0]) && ((s1_asid==tlb_asid[i]) || tlb_g[i]);
+    end
+endgenerate
+  \end{lstlisting}
+  匹配的逻辑是：对于每一个页表项,一个是要查看比较部分的全局标志位G和地址空间表示位
+  ASID；除此之外，还需要查看比较部分的页大小PS位和虚双页号VPPN位，如
+  果PS位为1，表示页大小为4MB（两个物理页大小均为2MB），此时只需要比
+  较VPPN的高10位是否与s_vppn的高10位相等，若相等则查找成功；如果PS
+  位为0，表示页大小为4KB（两个物理页大小均为4KB），此时需要比较VPPN
+  和s_vppn的全部位数。如果以上全部满足则查找成功。\par
+
+  然后得到found，portindex，port，ps信号（端口0为例），其中含义如下：\par
+  found：是否匹配到。\par
+  index：匹配到的页表项的项数。\par
+  port：双页中的哪一页，页大小为2MB时通过vppn的第8位来判断，4KB时通过输入的va_bit12来判断。\par
+  ps：页大小，2MB为21，4KB为12。\par
+  \begin{lstlisting}[language=verilog]
+assign s0_index = match0[0]  ? 4'b0000 :...    
+assign s1_index = match1[0]  ? 4'b0000 :...
+                 
+assign s0_found = |match0[TLBNUM-1:0];
+assign s1_found = |match1[TLBNUM-1:0];
+
+assign s0_ps = tlb_ps4MB[s0_index] ? 6'b010101 : 6'b001100;// 21 or 12 
+assign s1_ps = tlb_ps4MB[s1_index] ? 6'b010101 : 6'b001100;
+
+assign s0_port = tlb_ps4MB[s0_index] ? s0_vppn[8] : s0_va_bit12;
+assign s1_port = tlb_ps4MB[s1_index] ? s1_vppn[8] : s1_va_bit12;
+
+  \end{lstlisting}
+  最后通过index和port从页表中得到物理转换信息并输出：
+  \begin{lstlisting}[language=verilog]
+    assign s0_ppn = s0_port ? tlb_ppn1[s0_index] : tlb_ppn0[s0_index];
+    assign s1_ppn = s1_port ? tlb_ppn1[s1_index] : tlb_ppn0[s1_index];
+    assign s0_plv = s0_port ? tlb_plv1[s0_index] : tlb_plv0[s0_index];
+    assign s1_plv = s1_port ? tlb_plv1[s1_index] : tlb_plv0[s1_index];
+    assign s0_mat = s0_port ? tlb_mat1[s0_index] : tlb_mat0[s0_index];
+    assign s1_mat = s1_port ? tlb_mat1[s1_index] : tlb_mat0[s1_index];
+    assign s0_d = s0_port ? tlb_d1[s0_index] : tlb_d0[s0_index];
+    assign s1_d = s1_port ? tlb_d1[s1_index] : tlb_d0[s1_index];
+    assign s0_v = s0_port ? tlb_v1[s0_index] : tlb_v0[s0_index];
+    assign s1_v = s1_port ? tlb_v1[s1_index] : tlb_v0[s1_index];
+      \end{lstlisting}
+\end{enumerate}
 
 
 
